--- a/index.html
+++ b/index.html
@@ -159,9 +159,16 @@
                       <p>Not all of the content I post on social media will be NSFW, but most of the content I create is intended for mature audiences.</p>
                     </li>
                     <li>
-                      <p><strong>I block users who harass and attempt to hurt others. I use mass blockers, and I acknowledge that uninvolved users might be caught while doing so. 
-                        I also block everyone under the age of eighteen.</strong></p></li><li><p><strong>I don&#39;t care which fictional characters you ship, but I do care about 
-                    how you treat other people.</strong></p>
+                      <p>
+                        <strong>I block users who harass and defame others, as well as those who promote violence or hatred against others. I use mass blockers, and I acknowledge that uninvolved users might be caught while doing so. 
+                        I also block everyone under the age of eighteen.</strong>
+                      </p>
+                    </li>
+                    <li>
+                      <p>
+                        <strong>I don&#39;t care which fictional characters you ship, but I do care about 
+                    how you treat other people.</strong>
+                      </p>
                     </li>
                     <li>
                       <p>Notifications are off for non-followers.</p>
